// Copyright 2022 gRPC authors.

syntax = "proto3";

package channel_args;

message ResourceQuota {}

message ChannelArg {
    string key = 1;
    oneof value {
        string str = 2;
        int64 i = 3;
        ResourceQuota resource_quota = 4;
    }
}
