Here's the commented version of the code:

```c++
// Copyright 2015 gRPC authors.

// Header guard to prevent multiple inclusions
#ifndef GRPC_SRC_CORE_LIB_IOMGR_TCP_POSIX_H
#define GRPC_SRC_CORE_LIB_IOMGR_TCP_POSIX_H

// Include necessary headers
#include <grpc/event_engine/endpoint_config.h>  // For EndpointConfig
#include <grpc/support/port_platform.h>         // Platform-specific definitions

// Internal gRPC headers
#include "src/core/lib/debug/trace.h"            // Tracing functionality
#include "src/core/lib/iomgr/buffer_list.h"      // Buffer list utilities
#include "src/core/lib/iomgr/endpoint.h"         // Endpoint interface
#include "src/core/lib/iomgr/ev_posix.h"         // POSIX event handling
#include "src/core/lib/iomgr/port.h"             // Portability definitions
#include "src/core/lib/iomgr/socket_utils_posix.h"  // POSIX socket utilities

// Creates a TCP endpoint from a file descriptor
// Parameters:
//   fd - The file descriptor to create endpoint from
//   options - POSIX-specific TCP options
//   peer_string - String identifying the peer (typically "ip:port")
// Returns:
//   A new grpc_endpoint object
grpc_endpoint* grpc_tcp_create(grpc_fd* fd,
                               const grpc_core::PosixTcpOptions& options,
                               absl::string_view peer_string);

// Creates a TCP endpoint from a file descriptor using EndpointConfig
// Parameters:
//   fd - The file descriptor to create endpoint from
//   config - Configuration for the endpoint
//   peer_string - String identifying the peer (typically "ip:port")
// Returns:
//   A new grpc_endpoint object
grpc_endpoint* grpc_tcp_create(
    grpc_fd* fd, const grpc_event_engine::experimental::EndpointConfig& config,
    absl::string_view peer_string);

// Gets the underlying file descriptor from a TCP endpoint
// Parameters:
//   ep - The endpoint to query
// Returns:
//   The file descriptor associated with the endpoint
int grpc_tcp_fd(grpc_endpoint* ep);

// Destroys a TCP endpoint and optionally releases its file descriptor
// Parameters:
//   ep - The endpoint to destroy
//   fd - Pointer to store the released file descriptor (can be NULL)
//   done - Closure to execute when destruction is complete
void grpc_tcp_destroy_and_release_fd(grpc_endpoint* ep, int* fd,
                                     grpc_closure* done);

// POSIX-specific TCP functionality
#ifdef GRPC_POSIX_SOCKET_TCP

// Initializes POSIX-specific TCP functionality
void grpc_tcp_posix_init();

// Shuts down POSIX-specific TCP functionality
void grpc_tcp_posix_shutdown();

#endif  // GRPC_POSIX_SOCKET_TCP

#endif  // GRPC_SRC_CORE_LIB_IOMGR_TCP_POSIX_H
```

The comments provide:
1. Explanation of the header guard and includes
2. Documentation for each function including:
   - Purpose of the function
   - Parameters and their meaning
   - Return values where applicable
3. Context for platform-specific sections
4. Clear separation between different components

The comments are concise yet informative, following standard documentation practices for C++ code. They explain both what the code does and why it might be used, which is valuable for maintenance and future development.