Here's the commented version of the code:

```c++
// Copyright 2015 gRPC authors.

// Header guard to prevent multiple inclusions
#ifndef GRPC_SRC_CORE_LIB_SURFACE_LEGACY_CHANNEL_H
#define GRPC_SRC_CORE_LIB_SURFACE_LEGACY_CHANNEL_H

// Include necessary headers
#include <grpc/event_engine/event_engine.h>  // Event engine abstraction
#include <grpc/grpc.h>                       // Core gRPC functionality
#include <grpc/support/port_platform.h>      // Platform-specific configurations

#include <optional>  // For optional values
#include <string>    // For string operations

// Include project-specific headers
#include "absl/status/statusor.h"                     // Status or return type
#include "src/core/call/call_arena_allocator.h"       // Memory allocation for calls
#include "src/core/client_channel/client_channel_filter.h"  // Client channel filter
#include "src/core/lib/channel/channel_args.h"         // Channel arguments
#include "src/core/lib/channel/channel_fwd.h"          // Forward declarations
#include "src/core/lib/channel/channel_stack.h"        // Channel stack implementation
#include "src/core/lib/iomgr/iomgr_fwd.h"             // I/O manager forward declarations
#include "src/core/lib/slice/slice.h"                 // Slice implementation
#include "src/core/lib/surface/channel.h"             // Base Channel interface
#include "src/core/lib/surface/channel_stack_type.h"  // Channel stack types
#include "src/core/lib/transport/transport.h"         // Transport layer
#include "src/core/telemetry/stats.h"                 // Telemetry and statistics
#include "src/core/util/ref_counted_ptr.h"            // Reference-counted pointers
#include "src/core/util/time.h"                      // Time utilities

namespace grpc_core {

// LegacyChannel class implementing the Channel interface for backward compatibility
class LegacyChannel final : public Channel {
 public:
  // Creates a new LegacyChannel instance
  // Parameters:
  //   target: The target URI for the channel
  //   args: Channel configuration arguments
  //   channel_stack_type: Type of channel stack to create
  // Returns:
  //   StatusOr containing either the created channel or an error status
  static absl::StatusOr<RefCountedPtr<Channel>> Create(
      std::string target, ChannelArgs args,
      grpc_channel_stack_type channel_stack_type);

  // Constructor for LegacyChannel
  // Parameters:
  //   is_client: Whether this is a client channel
  //   target: The target URI for the channel
  //   channel_args: Channel configuration arguments
  //   channel_stack: The channel stack implementation
  LegacyChannel(bool is_client, std::string target,
                const ChannelArgs& channel_args,
                RefCountedPtr<grpc_channel_stack> channel_stack);

  // Cleans up resources when the channel is orphaned
  void Orphaned() override;

  // Checks if the channel is in a lame (non-functional) state
  bool IsLame() const override;

  // Creates a new call on this channel
  // Parameters:
  //   parent_call: Parent call if this is a child call
  //   propagation_mask: Propagation mask for call properties
  //   cq: Completion queue for the call
  //   pollset_set_alternative: Alternative pollset set
  //   path: Call path (method name)
  //   authority: Optional authority header
  //   deadline: Call deadline
  //   registered_method: Whether this is a registered method
  // Returns:
  //   Pointer to the created call
  grpc_call* CreateCall(grpc_call* parent_call, uint32_t propagation_mask,
                        grpc_completion_queue* cq,
                        grpc_pollset_set* pollset_set_alternative, Slice path,
                        std::optional<Slice> authority, Timestamp deadline,
                        bool registered_method) override;

  // Not supported on LegacyChannel (will crash if called)
  void StartCall(UnstartedCallHandler) override {
    Crash("StartCall() not supported on LegacyChannel");
  }

  // Returns the event engine associated with this channel
  grpc_event_engine::experimental::EventEngine* event_engine() const override {
    return channel_stack_->EventEngine();
  }

  // Checks if connectivity watchers are supported
  bool SupportsConnectivityWatcher() const override;

  // Checks the current connectivity state
  // Parameters:
  //   try_to_connect: Whether to attempt connection if not connected
  // Returns:
  //   Current connectivity state
  grpc_connectivity_state CheckConnectivityState(bool try_to_connect) override;

  // Watches for changes in connectivity state
  // Parameters:
  //   last_observed_state: Last known state
  //   deadline: Deadline for the watch operation
  //   cq: Completion queue for notifications
  //   tag: User-defined tag for the operation
  void WatchConnectivityState(grpc_connectivity_state last_observed_state,
                              Timestamp deadline, grpc_completion_queue* cq,
                              void* tag) override;

  // Adds a connectivity state watcher
  // Parameters:
  //   initial_state: Initial state to watch from
  //   watcher: The watcher to add
  void AddConnectivityWatcher(
      grpc_connectivity_state initial_state,
      OrphanablePtr<AsyncConnectivityStateWatcherInterface> watcher) override;
  
  // Removes a connectivity state watcher
  // Parameters:
  //   watcher: The watcher to remove
  void RemoveConnectivityWatcher(
      AsyncConnectivityStateWatcherInterface* watcher) override;

  // Gets channel information
  // Parameters:
  //   channel_info: Structure to populate with channel info
  void GetInfo(const grpc_channel_info* channel_info) override;

  // Resets the connection backoff
  void ResetConnectionBackoff() override;

  // Sends a ping to check channel liveness
  // Parameters:
  //   cq: Completion queue for ping completion
  //   tag: User-defined tag for the operation
  void Ping(grpc_completion_queue* cq, void* tag) override;

  // Returns whether this is a client channel
  bool is_client() const override { return is_client_; }
  
  // Returns the channel stack implementation
  grpc_channel_stack* channel_stack() const override {
    return channel_stack_.get();
  }

 private:
  // Nested class for watching channel state
  class StateWatcher;

  // Gets the client channel filter from the channel stack
  ClientChannelFilter* GetClientChannelFilter() const;

  // Flag indicating if this is a client channel
  const bool is_client_;
  // The channel stack implementation
  RefCountedPtr<grpc_channel_stack> channel_stack_;
};

}  // namespace grpc_core

#endif  // GRPC_SRC_CORE_LIB_SURFACE_LEGACY_CHANNEL_H
```